--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CALA</title>
-</head>
-<body>
-	<h1>CALA App</h1>
-
-	<script src="app.js" type="text/javascript"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>CALA APP</h1>
+    <p>Pagida de HIMNARIO CALA, CALA APP CALApp CALAApp</p>
+    <script src="app.js"></script>
+  </body>
 </html>
